feat: full platform overhaul - AI match scoring, candidate profile modal, double-submit fix, StrictMode removal, ViewApplicants deep-dive modal, student apply guards