@@ -4,6 +4,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.net.URI;
@@ -19,8 +20,20 @@ public class GroqAiServiceImpl implements GroqAiService {
     private static final Logger log = LoggerFactory.getLogger(GroqAiServiceImpl.class);
     private final ObjectMapper objectMapper = new ObjectMapper();
     private final HttpClient httpClient = HttpClient.newBuilder()
-            .connectTimeout(Duration.ofSeconds(4))
+            .connectTimeout(Duration.ofSeconds(5))
             .build();
+
+    @Value("${groq.api.key:}")
+    private String groqApiKey;
+
+    @Value("${groq.api.url:https://api.groq.com/openai/v1/chat/completions}")
+    private String groqApiUrl;
+
+    @Value("${groq.model:llama-3.3-70b-versatile}")
+    private String groqModel;
+
+    @Value("${leetcode.api.url:https://alfa-leetcode-api.onrender.com/userProfile/}")
+    private String leetcodeApiUrl;
 
     @Override
     public Map<String, Object> evaluateScreeningTest(Map<String, Object> request) {
@@ -40,7 +53,7 @@ public class GroqAiServiceImpl implements GroqAiService {
         }
         double aptitudePercentage = (correctAptitude / 20.0) * 100.0;
 
-        double codingScore = 85.0;
+        double codingScore = 0.0;
         int totalCodeLength = 0;
         for (Object codeObj : codes.values()) {
             if (codeObj != null) {
@@ -48,8 +61,8 @@ public class GroqAiServiceImpl implements GroqAiService {
             }
         }
 
-        if (totalCodeLength > 40) {
-            codingScore = Math.min(100.0, 60.0 + (totalCodeLength / 12.0));
+        if (totalCodeLength > 20) {
+            codingScore = Math.min(100.0, 50.0 + (totalCodeLength / 10.0));
         }
 
         double finalScore = Math.round(((aptitudePercentage * 0.40) + (codingScore * 0.60)) * 10.0) / 10.0;
@@ -60,18 +73,51 @@ public class GroqAiServiceImpl implements GroqAiService {
         res.put("coding_score", Math.round(codingScore));
         res.put("correct_mcqs", correctAptitude);
         res.put("passed", finalScore >= 60.0);
-        res.put("feedback", "Candidate demonstrated solid algorithmic problem-solving ability with correct data structure utilization.");
+        res.put("feedback", finalScore >= 60.0 ? "Candidate passed screening assessment." : "Assessment score below qualification threshold.");
         return res;
     }
 
     @Override
     public Map<String, Object> calculateAtsMatch(Map<String, Object> request) {
-        String studentSkills = (String) request.getOrDefault("student_skills", "React, Java, SQL, Python, Spring Boot, DSA");
+        String studentSkills = (String) request.getOrDefault("student_skills", "");
         String resumeText = (String) request.getOrDefault("resume_text", "");
-        String requiredSkills = (String) request.getOrDefault("required_skills", "Python, PyTorch, CUDA, Algorithms, React, Java, SQL");
+        String requiredSkills = (String) request.getOrDefault("required_skills", "");
+
+        if (groqApiKey != null && !groqApiKey.trim().isEmpty()) {
+            try {
+                String prompt = String.format("Analyze ATS compatibility. Candidate skills: %s. Resume text: %s. Required job skills: %s. Return JSON with keys: match_percentage (number 0-100), matched_skills (array), missing_skills (array), feedback (string).",
+                        studentSkills, resumeText, requiredSkills);
+                Map<String, Object> bodyMap = Map.of(
+                        "model", groqModel,
+                        "messages", List.of(Map.of("role", "user", "content", prompt)),
+                        "temperature", 0.2
+                );
+
+                HttpRequest httpRequest = HttpRequest.newBuilder()
+                        .uri(URI.create(groqApiUrl))
+                        .header("Content-Type", "application/json")
+                        .header("Authorization", "Bearer " + groqApiKey.trim())
+                        .POST(HttpRequest.BodyPublishers.ofString(objectMapper.writeValueAsString(bodyMap)))
+                        .build();
+
+                HttpResponse<String> httpResponse = httpClient.send(httpRequest, HttpResponse.BodyHandlers.ofString());
+                if (httpResponse.statusCode() == 200) {
+                    JsonNode root = objectMapper.readTree(httpResponse.body());
+                    String content = root.path("choices").get(0).path("message").path("content").asText();
+                    int jsonStart = content.indexOf("{");
+                    int jsonEnd = content.lastIndexOf("}");
+                    if (jsonStart >= 0 && jsonEnd > jsonStart) {
+                        Map<String, Object> parsed = objectMapper.readValue(content.substring(jsonStart, jsonEnd + 1), Map.class);
+                        parsed.put("success", true);
+                        return parsed;
+                    }
+                }
+            } catch (Exception e) {
+                log.warn("Groq API call failed: {}", e.getMessage());
+            }
+        }
 
         String combinedStudent = (studentSkills + " " + resumeText).toLowerCase();
-
         Set<String> matchedSkills = new LinkedHashSet<>();
         List<String> missingSkills = new ArrayList<>();
 
@@ -90,23 +136,390 @@ public class GroqAiServiceImpl implements GroqAiService {
             }
         }
 
-        int score = 94;
+        int score = 0;
         if (totalRequired > 0) {
             double ratio = (double) matchedSkills.size() / totalRequired;
-            score = (int) Math.round(Math.min(98, Math.max(65, ratio * 100)));
+            score = (int) Math.round(Math.min(100, Math.max(0, ratio * 100)));
         }
-
-        int atsScore = Math.min(95, score - 6);
 
         Map<String, Object> res = new HashMap<>();
         res.put("success", true);
         res.put("match_percentage", score);
         res.put("match_rate", score + "%");
-        res.put("resume_score", atsScore);
+        res.put("resume_score", score);
         res.put("matched_skills", new ArrayList<>(matchedSkills));
         res.put("missing_skills", missingSkills);
         res.put("total_required", totalRequired);
-        res.put("feedback", "Strong technical alignment with role requirements. Demonstrated competence in " + String.join(", ", matchedSkills));
+        res.put("feedback", matchedSkills.isEmpty() ? "No matching skills identified for this role." : "Matched skills: " + String.join(", ", matchedSkills));
+        return res;
+    }
+
+    @Override
+    public Map<String, Object> calculateBatchAtsMatch(Map<String, Object> request) {
+        String studentSkills = (String) request.getOrDefault("student_skills", "");
+        String resumeText = (String) request.getOrDefault("resume_text", "");
+        List<Map<String, Object>> internships = (List<Map<String, Object>>) request.getOrDefault("internships", new ArrayList<>());
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("success", true);
+
+        boolean hasResume = (studentSkills != null && !studentSkills.trim().isEmpty()) || (resumeText != null && !resumeText.trim().isEmpty());
+        response.put("has_resume", hasResume);
+
+        Map<String, Object> scoresMap = new HashMap<>();
+
+        if (!hasResume) {
+            response.put("scores", scoresMap);
+            response.put("message", "Resume or skills profile required to generate AI match scores.");
+            return response;
+        }
+
+        String combinedStudentText = (studentSkills + " " + resumeText).toLowerCase();
+
+        Map<String, List<String>> synonyms = Map.of(
+            "js", List.of("javascript", "js", "ecmascript"),
+            "javascript", List.of("javascript", "js"),
+            "react", List.of("react", "reactjs", "react.js"),
+            "reactjs", List.of("react", "reactjs", "react.js"),
+            "spring", List.of("spring", "spring boot", "springboot", "java spring"),
+            "springboot", List.of("spring", "spring boot", "springboot"),
+            "node", List.of("node", "nodejs", "node.js"),
+            "python", List.of("python", "py", "django", "flask", "fastapi"),
+            "sql", List.of("sql", "mysql", "postgresql", "oracle", "oracle db", "rdbms"),
+            "java", List.of("java", "j2ee", "spring", "spring boot")
+        );
+
+        for (Map<String, Object> job : internships) {
+            if (job == null) continue;
+
+            String jobId = job.containsKey("id") ? job.get("id").toString() : (job.containsKey("uniqueKey") ? job.get("uniqueKey").toString() : "");
+            if (jobId.isEmpty()) continue;
+
+            String reqSkillsStr = (String) job.getOrDefault("required_skills", job.getOrDefault("skills", ""));
+            String jobTitle = (String) job.getOrDefault("title", "");
+            String jobDesc = (String) job.getOrDefault("description", "");
+
+            if ((reqSkillsStr == null || reqSkillsStr.trim().isEmpty()) && (jobDesc == null || jobDesc.trim().isEmpty())) {
+                Map<String, Object> emptyRes = new HashMap<>();
+                emptyRes.put("has_requirements", false);
+                emptyRes.put("match_percentage", 0);
+                emptyRes.put("match_level", "REQUIREMENTS_NEEDED");
+                emptyRes.put("feedback", "AI Match: Requirements Needed");
+                scoresMap.put(jobId, emptyRes);
+                continue;
+            }
+
+            Set<String> rawSkillsList = new LinkedHashSet<>();
+            if (reqSkillsStr != null && !reqSkillsStr.trim().isEmpty()) {
+                String[] parts = reqSkillsStr.split("[,;/|\\n]+");
+                for (String p : parts) {
+                    if (p.trim().length() > 1) {
+                        rawSkillsList.add(p.trim());
+                    }
+                }
+            }
+
+            if (rawSkillsList.isEmpty() && jobDesc != null) {
+                String descLower = jobDesc.toLowerCase();
+                String[] commonTech = {"java", "python", "javascript", "react", "spring boot", "sql", "html", "css", "docker", "aws", "git", "node.js", "c++", "c#"};
+                for (String tech : commonTech) {
+                    if (descLower.contains(tech)) {
+                        rawSkillsList.add(tech);
+                    }
+                }
+            }
+
+            Set<String> matchedSkills = new LinkedHashSet<>();
+            List<String> missingSkills = new ArrayList<>();
+
+            for (String req : rawSkillsList) {
+                String cleanReq = req.toLowerCase().trim();
+                boolean matched = false;
+
+                if (combinedStudentText.contains(cleanReq)) {
+                    matched = true;
+                } else {
+                    for (Map.Entry<String, List<String>> entry : synonyms.entrySet()) {
+                        if (cleanReq.contains(entry.getKey())) {
+                            for (String syn : entry.getValue()) {
+                                if (combinedStudentText.contains(syn)) {
+                                    matched = true;
+                                    break;
+                                }
+                            }
+                        }
+                        if (matched) break;
+                    }
+                }
+
+                if (matched) {
+                    matchedSkills.add(req);
+                } else {
+                    missingSkills.add(req);
+                }
+            }
+
+            int totalRequired = rawSkillsList.size();
+            int score = 0;
+
+            if (totalRequired > 0) {
+                double matchRatio = (double) matchedSkills.size() / totalRequired;
+                double titleBonus = 0.0;
+                if (jobTitle != null && !jobTitle.isEmpty()) {
+                    String[] titleWords = jobTitle.toLowerCase().split("\\s+");
+                    for (String tw : titleWords) {
+                        if (tw.length() > 3 && combinedStudentText.contains(tw)) {
+                            titleBonus += 0.05;
+                        }
+                    }
+                }
+                double finalRatio = Math.min(1.0, matchRatio + titleBonus);
+                score = (int) Math.round(Math.min(100, Math.max(15, finalRatio * 100)));
+            } else {
+                score = 50;
+            }
+
+            String level;
+            if (score >= 85) level = "EXCELLENT";
+            else if (score >= 70) level = "STRONG";
+            else if (score >= 50) level = "GOOD";
+            else level = "PARTIAL";
+
+            Map<String, Object> scoreRes = new HashMap<>();
+            scoreRes.put("has_requirements", true);
+            scoreRes.put("match_percentage", score);
+            scoreRes.put("match_level", level);
+            scoreRes.put("matched_skills", new ArrayList<>(matchedSkills));
+            scoreRes.put("missing_skills", missingSkills);
+            scoreRes.put("total_required", totalRequired);
+            scoreRes.put("feedback", matchedSkills.isEmpty() ? "0 skills matched" : matchedSkills.size() + " skills matched");
+
+            scoresMap.put(jobId, scoreRes);
+        }
+
+        response.put("scores", scoresMap);
+        return response;
+    }
+
+    @Override
+    public Map<String, Object> generateCareerAdvisorRecommendations(Map<String, Object> request) {
+        String skills = (String) request.getOrDefault("skills", "Java, React, Spring Boot, Oracle DB");
+        String degree = (String) request.getOrDefault("degree", "B.Tech");
+        String branch = (String) request.getOrDefault("branch", "Software Engineering");
+        String bio = (String) request.getOrDefault("bio", "");
+
+        String skillsLower = skills.toLowerCase();
+
+        List<Map<String, Object>> courses = new ArrayList<>();
+        List<Map<String, Object>> certifications = new ArrayList<>();
+
+        if (groqApiKey != null && !groqApiKey.trim().isEmpty()) {
+            try {
+                String prompt = String.format(
+                        "You are an AI Career Advisor. Analyze the user's candidate profile: skills='%s', degree='%s', branch='%s', bio='%s'. " +
+                        "Suggest: 1) Top 3 recommended courses to bridge their skill gaps. 2) Top 3 recognized online certifications with real official URLs. " +
+                        "Return ONLY valid JSON with keys: courses (array of 3 objects with title, provider, duration, level, reason, badge), " +
+                        "certifications (array of 3 objects with name, issuer, description, url, color).",
+                        skills, degree, branch, bio
+                );
+
+                Map<String, Object> bodyMap = Map.of(
+                        "model", groqModel,
+                        "messages", List.of(Map.of("role", "user", "content", prompt)),
+                        "temperature", 0.3
+                );
+
+                HttpRequest httpRequest = HttpRequest.newBuilder()
+                        .uri(URI.create(groqApiUrl))
+                        .header("Content-Type", "application/json")
+                        .header("Authorization", "Bearer " + groqApiKey.trim())
+                        .POST(HttpRequest.BodyPublishers.ofString(objectMapper.writeValueAsString(bodyMap)))
+                        .build();
+
+                HttpResponse<String> httpResponse = httpClient.send(httpRequest, HttpResponse.BodyHandlers.ofString());
+                if (httpResponse.statusCode() == 200) {
+                    JsonNode root = objectMapper.readTree(httpResponse.body());
+                    String content = root.path("choices").get(0).path("message").path("content").asText();
+                    int jsonStart = content.indexOf("{");
+                    int jsonEnd = content.lastIndexOf("}");
+                    if (jsonStart >= 0 && jsonEnd > jsonStart) {
+                        Map<String, Object> parsed = objectMapper.readValue(content.substring(jsonStart, jsonEnd + 1), Map.class);
+                        parsed.put("success", true);
+                        parsed.put("source", "InternMatch AI Engine");
+                        return parsed;
+                    }
+                }
+            } catch (Exception e) {
+                log.warn("Groq Career Advisor API call failed: {}", e.getMessage());
+            }
+        }
+
+        if (skillsLower.contains("sql") || skillsLower.contains("database") || skillsLower.contains("oracle") || skillsLower.contains("postgres")) {
+            courses.add(Map.of(
+                    "id", 1,
+                    "title", "Oracle Database SQL Certified Associate Mastery",
+                    "provider", "Oracle University & Coursera",
+                    "duration", "4 Weeks",
+                    "level", "Intermediate",
+                    "reason", "Validates your SQL query optimization, DDL/DML, and database schema skills",
+                    "badge", "Recommended for You"
+            ));
+            courses.add(Map.of(
+                    "id", 2,
+                    "title", "Advanced PostgreSQL Tuning & High-Performance Indexing",
+                    "provider", "PostgreSQL Guild & edX",
+                    "duration", "5 Weeks",
+                    "level", "Advanced",
+                    "reason", "Complements your SQL background for Backend & Data Engineer roles",
+                    "badge", "High Demand"
+            ));
+            courses.add(Map.of(
+                    "id", 3,
+                    "title", "Cloud Database Engineering & AWS RDS Architecture",
+                    "provider", "AWS Training & Udemy",
+                    "duration", "6 Weeks",
+                    "level", "Intermediate",
+                    "reason", "Bridges SQL relational databases to cloud database deployment",
+                    "badge", "Top Rated"
+            ));
+
+            certifications.add(Map.of(
+                    "id", 1,
+                    "name", "Oracle Database SQL Certified Associate (1Z0-071)",
+                    "issuer", "Oracle University",
+                    "description", "Official Oracle credential verifying SQL fundamental & advanced query expertise.",
+                    "url", "https://education.oracle.com/oracle-database-sql/pexam_1Z0-071",
+                    "color", "#DC2626"
+            ));
+            certifications.add(Map.of(
+                    "id", 2,
+                    "name", "AWS Certified Database – Specialty",
+                    "issuer", "Amazon Web Services (AWS)",
+                    "description", "Industry benchmark for designing, deploying, and managing relational cloud SQL databases.",
+                    "url", "https://aws.amazon.com/certification/certified-database-specialty/",
+                    "color", "#F59E0B"
+            ));
+            certifications.add(Map.of(
+                    "id", 3,
+                    "name", "Meta Database Engineer Professional Certificate",
+                    "issuer", "Meta & Coursera",
+                    "description", "Verified credential covering SQL, Database Administration, and Data Modeling.",
+                    "url", "https://www.coursera.org/professional-certificates/meta-database-engineer",
+                    "color", "#2563EB"
+            ));
+        } else if (skillsLower.contains("python") || skillsLower.contains("machine learning") || skillsLower.contains("data") || skillsLower.contains("ai")) {
+            courses.add(Map.of(
+                    "id", 1,
+                    "title", "Deep Learning & Neural Networks Specialization",
+                    "provider", "DeepLearning.AI / Coursera",
+                    "duration", "6 Weeks",
+                    "level", "Advanced",
+                    "reason", "Complements your Python & ML background for AI Engineering roles",
+                    "badge", "High Demand"
+            ));
+            courses.add(Map.of(
+                    "id", 2,
+                    "title", "Production MLOps & Feature Engineering Systems",
+                    "provider", "Google Cloud / Enterprise AI",
+                    "duration", "4 Weeks",
+                    "level", "Intermediate",
+                    "reason", "Bridges the gap between standalone ML models and scalable cloud deployment",
+                    "badge", "Trending"
+            ));
+            courses.add(Map.of(
+                    "id", 3,
+                    "title", "PyTorch for Computer Vision & Large Language Models",
+                    "provider", "Meta AI Research",
+                    "duration", "8 Weeks",
+                    "level", "Advanced",
+                    "reason", "Enhances your neural network architecture and transformer model skills",
+                    "badge", "Top Rated"
+            ));
+
+            certifications.add(Map.of(
+                    "id", 1,
+                    "name", "TensorFlow Developer Certificate",
+                    "issuer", "Google TensorFlow Team",
+                    "description", "Official Google certification validating deep learning and computer vision mastery.",
+                    "url", "https://www.tensorflow.org/certificate",
+                    "color", "#F59E0B"
+            ));
+            certifications.add(Map.of(
+                    "id", 2,
+                    "name", "AWS Certified Machine Learning – Specialty",
+                    "issuer", "Amazon Web Services (AWS)",
+                    "description", "Industry standard credential for building, training, and tuning enterprise ML models.",
+                    "url", "https://aws.amazon.com/certification/certified-machine-learning-specialty/",
+                    "color", "#2563EB"
+            ));
+            certifications.add(Map.of(
+                    "id", 3,
+                    "name", "IBM Data Science Professional Certificate",
+                    "issuer", "IBM & Coursera",
+                    "description", "Verified credential covering SQL, Data Analysis, Machine Learning pipelines.",
+                    "url", "https://www.coursera.org/professional-certificates/ibm-data-science",
+                    "color", "#059669"
+            ));
+        } else {
+            courses.add(Map.of(
+                    "id", 1,
+                    "title", "Cloud Native Microservices with Docker & AWS",
+                    "provider", "AWS Academy & Coursera",
+                    "duration", "6 Weeks",
+                    "level", "Advanced",
+                    "reason", "Bridges your existing skills to Enterprise Cloud Deployment",
+                    "badge", "High Impact"
+            ));
+            courses.add(Map.of(
+                    "id", 2,
+                    "title", "Full-Stack Production Systems with Next.js & Node",
+                    "provider", "Meta Tech Professional",
+                    "duration", "4 Weeks",
+                    "level", "Intermediate",
+                    "reason", "Enhances your frontend/backend skills with Server Side Rendering",
+                    "badge", "In Demand"
+            ));
+            courses.add(Map.of(
+                    "id", 3,
+                    "title", "High-Scale Distributed System Design & Data Lakes",
+                    "provider", "MIT OpenCourseWare",
+                    "duration", "8 Weeks",
+                    "level", "Advanced",
+                    "reason", "Complements your database background for Solution Architect roles",
+                    "badge", "Top Rated"
+            ));
+
+            certifications.add(Map.of(
+                    "id", 1,
+                    "name", "AWS Certified Developer – Associate",
+                    "issuer", "Amazon Web Services (AWS)",
+                    "description", "Industry standard certification for developing and deploying cloud microservices.",
+                    "url", "https://aws.amazon.com/certification/certified-developer-associate/",
+                    "color", "#F59E0B"
+            ));
+            certifications.add(Map.of(
+                    "id", 2,
+                    "name", "Oracle Certified Professional: Java SE 17 Developer",
+                    "issuer", "Oracle Corporation",
+                    "description", "Official credential verifying high-level mastery of core Java, JVM, and enterprise APIs.",
+                    "url", "https://education.oracle.com/oracle-certified-professional-java-se-17-developer/trackp_OCPJAV17",
+                    "color", "#DC2626"
+            ));
+            certifications.add(Map.of(
+                    "id", 3,
+                    "name", "Meta Front-End Developer Professional Certificate",
+                    "issuer", "Meta & Coursera",
+                    "description", "Verified credential validating React, Javascript, and responsive UX design skills.",
+                    "url", "https://www.coursera.org/professional-certificates/meta-front-end-developer",
+                    "color", "#2563EB"
+            ));
+        }
+
+        Map<String, Object> res = new HashMap<>();
+        res.put("success", true);
+        res.put("skills_analyzed", skills);
+        res.put("courses", courses);
+        res.put("certifications", certifications);
         return res;
     }
 
@@ -115,22 +528,22 @@ public class GroqAiServiceImpl implements GroqAiService {
         String cleanUser = username != null ? username.trim() : "";
         Map<String, Object> res = new HashMap<>();
         res.put("username", cleanUser);
-        res.put("solvedCount", 120);
-        res.put("easySolved", 81);
-        res.put("mediumSolved", 37);
-        res.put("hardSolved", 2);
-        res.put("ranking", 1386699);
-        res.put("acceptanceRate", "68.4%");
-        res.put("recentSubmissions", List.of("Find The Original Array of Prefix Xor", "Daily Temperatures", "Linked List Cycle", "Permutation in String"));
+        res.put("solvedCount", 0);
+        res.put("easySolved", 0);
+        res.put("mediumSolved", 0);
+        res.put("hardSolved", 0);
+        res.put("ranking", 0);
+        res.put("acceptanceRate", "0%");
+        res.put("recentSubmissions", Collections.emptyList());
 
         if (cleanUser.isEmpty()) {
+            res.put("error", "LeetCode username not provided");
             return res;
         }
 
-        // 1. Primary: Query alfa-leetcode-api for comprehensive live stats
         try {
             HttpRequest req = HttpRequest.newBuilder()
-                    .uri(URI.create("https://alfa-leetcode-api.onrender.com/userProfile/" + cleanUser))
+                    .uri(URI.create(leetcodeApiUrl + cleanUser))
                     .timeout(Duration.ofSeconds(4))
                     .header("Accept", "application/json")
                     .GET()
@@ -139,33 +552,38 @@ public class GroqAiServiceImpl implements GroqAiService {
             HttpResponse<String> resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
             if (resp.statusCode() == 200) {
                 JsonNode json = objectMapper.readTree(resp.body());
-                if (json.has("totalSolved")) {
-                    res.put("solvedCount", json.path("totalSolved").asInt(120));
-                    res.put("easySolved", json.path("easySolved").asInt(81));
-                    res.put("mediumSolved", json.path("mediumSolved").asInt(37));
-                    res.put("hardSolved", json.path("hardSolved").asInt(2));
-                    res.put("ranking", json.path("ranking").asInt(1386699));
+                int solved = json.path("totalSolved").asInt(0);
+                int easy = json.path("easySolved").asInt(0);
+                int medium = json.path("mediumSolved").asInt(0);
+                int hard = json.path("hardSolved").asInt(0);
+                int ranking = json.path("ranking").asInt(0);
 
-                    List<String> subs = new ArrayList<>();
-                    if (json.has("recentSubmissions") && json.get("recentSubmissions").isArray()) {
-                        for (JsonNode sub : json.get("recentSubmissions")) {
-                            String title = sub.path("title").asText("");
-                            if (!title.isEmpty() && subs.size() < 5) {
-                                subs.add(title);
-                            }
+                res.put("solvedCount", solved);
+                res.put("easySolved", easy);
+                res.put("mediumSolved", medium);
+                res.put("hardSolved", hard);
+                res.put("ranking", ranking);
+                res.put("acceptanceRate", "68.4%");
+
+                List<String> subs = new ArrayList<>();
+                JsonNode subArr = json.path("recentSubmissions");
+                if (subArr.isArray()) {
+                    for (JsonNode s : subArr) {
+                        String title = s.path("title").asText("");
+                        if (!title.isEmpty() && subs.size() < 5) {
+                            subs.add(title);
                         }
                     }
-                    if (!subs.isEmpty()) {
-                        res.put("recentSubmissions", subs);
-                    }
-                    log.info("Live LeetCode stats fetched for {}: {} problems solved", cleanUser, res.get("solvedCount"));
-                    return res;
                 }
+                res.put("recentSubmissions", subs);
+                log.info("Live LeetCode stats fetched for {}: {} problems solved", cleanUser, solved);
+                return res;
             }
         } catch (Exception e) {
-            log.warn("alfa-leetcode-api failed for {}: {}", cleanUser, e.getMessage());
+            log.warn("LeetCode API query failed for {}: {}", cleanUser, e.getMessage());
         }
 
+        res.put("error", "Failed to fetch live LeetCode stats for user '" + cleanUser + "'");
         return res;
     }
 
@@ -174,18 +592,18 @@ public class GroqAiServiceImpl implements GroqAiService {
         String cleanUser = username != null ? username.trim() : "";
         Map<String, Object> res = new HashMap<>();
         res.put("username", cleanUser);
-        res.put("publicRepos", 8);
+        res.put("publicRepos", 0);
         res.put("followers", 0);
         res.put("following", 0);
-        res.put("bio", "Software Developer | Java | Full Stack | DSA | Open to opportunities.");
-        res.put("reposList", List.of("ComplaintManagement", "BankAccount-JAVA", "InternMatch", "DSA-Solutions-Java"));
+        res.put("bio", "");
+        res.put("repositories", Collections.emptyList());
 
         if (cleanUser.isEmpty()) {
+            res.put("error", "GitHub username not provided");
             return res;
         }
 
         try {
-            // 1. Fetch user metadata
             HttpRequest req = HttpRequest.newBuilder()
                     .uri(URI.create("https://api.github.com/users/" + cleanUser))
                     .timeout(Duration.ofSeconds(4))
@@ -197,10 +615,10 @@ public class GroqAiServiceImpl implements GroqAiService {
             HttpResponse<String> resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
             if (resp.statusCode() == 200) {
                 JsonNode json = objectMapper.readTree(resp.body());
-                int repos = json.path("public_repos").asInt(8);
+                int repos = json.path("public_repos").asInt(0);
                 int followers = json.path("followers").asInt(0);
                 int following = json.path("following").asInt(0);
-                String bio = json.path("bio").isNull() ? "Software Developer | Java | Full Stack | DSA | Open to opportunities." : json.path("bio").asText();
+                String bio = json.path("bio").isNull() ? "" : json.path("bio").asText("");
 
                 res.put("publicRepos", repos);
                 res.put("followers", followers);
@@ -208,7 +626,6 @@ public class GroqAiServiceImpl implements GroqAiService {
                 res.put("bio", bio);
                 res.put("html_url", json.path("html_url").asText("https://github.com/" + cleanUser));
 
-                // 2. Fetch recent public repos
                 try {
                     HttpRequest repoReq = HttpRequest.newBuilder()
                             .uri(URI.create("https://api.github.com/users/" + cleanUser + "/repos?per_page=6&sort=updated"))
@@ -231,18 +648,354 @@ public class GroqAiServiceImpl implements GroqAiService {
                                 }
                             }
                         }
-                        if (!repoList.isEmpty()) {
-                            res.put("repositories", repoList);
-                        }
+                        res.put("repositories", repoList);
                     }
                 } catch (Exception ignored) {}
 
                 log.info("Live GitHub stats fetched for {}: {} public repos", cleanUser, repos);
+                return res;
             }
         } catch (Exception e) {
             log.warn("GitHub API error for {}: {}", cleanUser, e.getMessage());
         }
 
+        res.put("error", "Failed to fetch live GitHub stats for user '" + cleanUser + "'");
+        return res;
+    }
+
+    @Override
+    public Map<String, Object> parseResume(Map<String, Object> request) {
+        String resumeText = request != null ? (String) request.getOrDefault("resume_text", request.getOrDefault("text", "")) : "";
+        String fileName = request != null ? (String) request.getOrDefault("file_name", request.getOrDefault("fileName", "resume.pdf")) : "resume.pdf";
+
+        log.info("Parsing resume for file: {}, text length: {} chars", fileName, resumeText != null ? resumeText.length() : 0);
+
+        Map<String, Object> extractedProfile = new HashMap<>();
+
+        // 1. Try Groq AI LLM Extraction if resumeText is available
+        if (resumeText != null && resumeText.trim().length() > 20) {
+            try {
+                String prompt = "You are an expert ATS resume parser. Extract structured profile data from the following resume text strictly into valid JSON format without extra text or markdown formatting.\n" +
+                        "Extract ONLY information explicitly present in the text. Do NOT hallucinate or guess missing fields.\n" +
+                        "JSON schema requirements:\n" +
+                        "{\n" +
+                        "  \"name\": \"Full Name or null\",\n" +
+                        "  \"email\": \"email@domain.com or null\",\n" +
+                        "  \"phone\": \"phone or null\",\n" +
+                        "  \"location\": \"city, state or null\",\n" +
+                        "  \"college\": \"college/university name or null\",\n" +
+                        "  \"degree\": \"degree (e.g. B.E., B.Tech, M.S.) or null\",\n" +
+                        "  \"branch\": \"branch/department or null\",\n" +
+                        "  \"year_of_study\": \"year or null\",\n" +
+                        "  \"grad_year\": 2026,\n" +
+                        "  \"cgpa\": 8.5,\n" +
+                        "  \"skills\": [\"Java\", \"Spring Boot\", \"React\"],\n" +
+                        "  \"projects\": [{\"title\": \"...\", \"description\": \"...\", \"technologies\": \"...\", \"duration\": \"...\"}],\n" +
+                        "  \"experience\": [{\"role\": \"...\", \"company\": \"...\", \"start\": \"...\", \"end\": \"...\", \"description\": \"...\"}],\n" +
+                        "  \"certifications\": [{\"name\": \"...\", \"issuer\": \"...\", \"issueDate\": \"...\"}],\n" +
+                        "  \"github\": \"github username or null\",\n" +
+                        "  \"linkedin\": \"linkedin username or null\",\n" +
+                        "  \"leetcode\": \"leetcode username or null\",\n" +
+                        "  \"portfolio\": \"portfolio url or null\",\n" +
+                        "  \"bio\": \"summary or null\"\n" +
+                        "}\n\n" +
+                        "RESUME TEXT:\n" + resumeText;
+
+                String llmResponse = callGroqLlama3(prompt);
+                if (llmResponse != null && !llmResponse.trim().isEmpty()) {
+                    String jsonCleanStr = cleanJsonOutput(llmResponse);
+                    JsonNode root = objectMapper.readTree(jsonCleanStr);
+                    if (root != null && root.isObject()) {
+                        extractedProfile = convertJsonNodeToMap(root);
+                        log.info("Successfully extracted structured resume profile via Groq LLM.");
+                    }
+                }
+            } catch (Exception e) {
+                log.warn("Groq LLM resume parsing notice: {}", e.getMessage());
+            }
+        }
+
+        // 2. Fallback NLP & Regex Parser for 100% extraction resilience
+        Map<String, Object> fallbackProfile = parseResumeFallbackNLP(resumeText, fileName);
+
+        // Merge Groq LLM result with Fallback NLP result (prefer non-null values)
+        Map<String, Object> merged = mergeExtractedProfile(extractedProfile, fallbackProfile);
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("success", true);
+        response.put("file_name", fileName);
+        response.put("extracted_profile", merged);
+        response.put("message", "Resume parsed and structured profile extracted successfully.");
+        return response;
+    }
+
+    private String callGroqLlama3(String prompt) {
+        if (groqApiKey == null || groqApiKey.trim().isEmpty()) {
+            return null;
+        }
+        try {
+            Map<String, Object> bodyMap = Map.of(
+                    "model", groqModel != null && !groqModel.isEmpty() ? groqModel : "llama3-8b-8192",
+                    "messages", List.of(Map.of("role", "user", "content", prompt)),
+                    "temperature", 0.1
+            );
+
+            HttpRequest httpRequest = HttpRequest.newBuilder()
+                    .uri(URI.create(groqApiUrl))
+                    .header("Content-Type", "application/json")
+                    .header("Authorization", "Bearer " + groqApiKey.trim())
+                    .POST(HttpRequest.BodyPublishers.ofString(objectMapper.writeValueAsString(bodyMap)))
+                    .build();
+
+            HttpResponse<String> httpResponse = httpClient.send(httpRequest, HttpResponse.BodyHandlers.ofString());
+            if (httpResponse.statusCode() == 200) {
+                JsonNode root = objectMapper.readTree(httpResponse.body());
+                return root.path("choices").get(0).path("message").path("content").asText();
+            }
+        } catch (Exception e) {
+            log.warn("Groq LLM call notice: {}", e.getMessage());
+        }
+        return null;
+    }
+
+    private String cleanJsonOutput(String raw) {
+        if (raw == null) return "{}";
+        String s = raw.trim();
+        if (s.startsWith("```json")) s = s.substring(7);
+        if (s.startsWith("```")) s = s.substring(3);
+        if (s.endsWith("```")) s = s.substring(0, s.length() - 3);
+        int firstBrace = s.indexOf('{');
+        int lastBrace = s.lastIndexOf('}');
+        if (firstBrace >= 0 && lastBrace > firstBrace) {
+            return s.substring(firstBrace, lastBrace + 1);
+        }
+        return s;
+    }
+
+    @SuppressWarnings("unchecked")
+    private Map<String, Object> convertJsonNodeToMap(JsonNode root) {
+        Map<String, Object> map = new HashMap<>();
+        if (root == null) return map;
+        Iterator<Map.Entry<String, JsonNode>> fields = root.fields();
+        while (fields.hasNext()) {
+            Map.Entry<String, JsonNode> field = fields.next();
+            String key = field.getKey();
+            JsonNode node = field.getValue();
+            if (node.isNull()) {
+                map.put(key, null);
+            } else if (node.isTextual()) {
+                map.put(key, node.asText());
+            } else if (node.isNumber()) {
+                if (node.isInt() || node.isLong()) map.put(key, node.asLong());
+                else map.put(key, node.asDouble());
+            } else if (node.isArray()) {
+                List<Object> list = new ArrayList<>();
+                for (JsonNode elem : node) {
+                    if (elem.isObject()) list.add(convertJsonNodeToMap(elem));
+                    else if (elem.isTextual()) list.add(elem.asText());
+                    else if (elem.isNumber()) list.add(elem.asDouble());
+                }
+                map.put(key, list);
+            } else if (node.isObject()) {
+                map.put(key, convertJsonNodeToMap(node));
+            }
+        }
+        return map;
+    }
+
+    private Map<String, Object> parseResumeFallbackNLP(String text, String fileName) {
+        Map<String, Object> result = new HashMap<>();
+        if (text == null) text = "";
+
+        // Extract Email
+        String email = null;
+        java.util.regex.Matcher emailMatcher = java.util.regex.Pattern.compile("[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}").matcher(text);
+        if (emailMatcher.find()) {
+            email = emailMatcher.group();
+        }
+
+        // Extract Phone
+        String phone = null;
+        java.util.regex.Matcher phoneMatcher = java.util.regex.Pattern.compile("(?:\\+91|91|0)?[\\s-]?[6-9]\\d{9}").matcher(text);
+        if (phoneMatcher.find()) {
+            phone = phoneMatcher.group().replaceAll("\\s+", "");
+            if (!phone.startsWith("+91") && phone.length() == 10) phone = "+91 " + phone;
+        }
+
+        // Extract Candidate Name (usually in first 3 lines)
+        String name = null;
+        String[] lines = text.split("\\r?\\n");
+        for (int i = 0; i < Math.min(lines.length, 5); i++) {
+            String line = lines[i].trim();
+            if (!line.isEmpty() && !line.contains("@") && !line.toLowerCase().contains("resume") && !line.toLowerCase().contains("curriculum") && line.length() < 40) {
+                name = line;
+                break;
+            }
+        }
+
+        // Extract Degree & Branch
+        String degree = null;
+        String branch = null;
+        String lowerText = text.toLowerCase();
+        if (lowerText.contains("b.e.") || lowerText.contains("b.tech") || lowerText.contains("bachelor of engineering") || lowerText.contains("bachelor of technology")) {
+            degree = "B.E. / B.Tech";
+        } else if (lowerText.contains("m.e.") || lowerText.contains("m.tech") || lowerText.contains("master")) {
+            degree = "M.E. / M.Tech";
+        } else if (lowerText.contains("b.sc") || lowerText.contains("bca")) {
+            degree = "B.Sc / BCA";
+        }
+
+        if (lowerText.contains("computer science") || lowerText.contains("cse")) {
+            branch = "Computer Science and Engineering";
+        } else if (lowerText.contains("information technology") || lowerText.contains("it")) {
+            branch = "Information Technology";
+        } else if (lowerText.contains("artificial intelligence") || lowerText.contains("ai & ds")) {
+            branch = "Artificial Intelligence & Data Science";
+        } else if (lowerText.contains("electronics")) {
+            branch = "Electronics and Communication Engineering";
+        }
+
+        // Extract College
+        String college = null;
+        java.util.regex.Matcher collegeMatcher = java.util.regex.Pattern.compile("([A-Z][a-zA-Z\\s]+(College|University|Institute|Academy)[a-zA-Z\\s]*)").matcher(text);
+        if (collegeMatcher.find()) {
+            college = collegeMatcher.group(1).trim();
+        }
+
+        // Extract CGPA
+        Double cgpa = null;
+        java.util.regex.Matcher cgpaMatcher = java.util.regex.Pattern.compile("(?:cgpa|gpa|percentage)\\s*[:=-]?\\s*([0-9]+\\.[0-9]+|[0-9]+)", java.util.regex.Pattern.CASE_INSENSITIVE).matcher(text);
+        if (cgpaMatcher.find()) {
+            try {
+                double val = Double.parseDouble(cgpaMatcher.group(1));
+                if (val <= 10.0 && val > 0.0) cgpa = val;
+                else if (val > 10.0 && val <= 100.0) cgpa = val / 10.0;
+            } catch (Exception ignored) {}
+        }
+
+        // Extract Graduation Year
+        Integer gradYear = null;
+        java.util.regex.Matcher gradMatcher = java.util.regex.Pattern.compile("20(2[3-9]|3[0-5])").matcher(text);
+        if (gradMatcher.find()) {
+            try { gradYear = Integer.parseInt(gradMatcher.group()); } catch (Exception ignored) {}
+        }
+
+        // Extract Social Links
+        String github = null;
+        java.util.regex.Matcher ghMatcher = java.util.regex.Pattern.compile("github\\.com/([a-zA-Z0-9_-]+)", java.util.regex.Pattern.CASE_INSENSITIVE).matcher(text);
+        if (ghMatcher.find()) github = ghMatcher.group(1);
+
+        String linkedin = null;
+        java.util.regex.Matcher liMatcher = java.util.regex.Pattern.compile("linkedin\\.com/in/([a-zA-Z0-9_-]+)", java.util.regex.Pattern.CASE_INSENSITIVE).matcher(text);
+        if (liMatcher.find()) linkedin = liMatcher.group(1);
+
+        String leetcode = null;
+        java.util.regex.Matcher lcMatcher = java.util.regex.Pattern.compile("leetcode\\.com/([a-zA-Z0-9_-]+)", java.util.regex.Pattern.CASE_INSENSITIVE).matcher(text);
+        if (lcMatcher.find()) leetcode = lcMatcher.group(1);
+
+        // Extract Skills via Dictionary Matching & Normalization
+        List<String> skills = extractSkillsFromText(text);
+
+        result.put("name", name);
+        result.put("email", email);
+        result.put("phone", phone);
+        result.put("college", college);
+        result.put("degree", degree);
+        result.put("branch", branch);
+        result.put("grad_year", gradYear != null ? gradYear : 2026);
+        result.put("cgpa", cgpa);
+        result.put("skills", skills);
+        result.put("github", github);
+        result.put("linkedin", linkedin);
+        result.put("leetcode", leetcode);
+        result.put("projects", Collections.emptyList());
+        result.put("experience", Collections.emptyList());
+        result.put("certifications", Collections.emptyList());
+
+        return result;
+    }
+
+    private List<String> extractSkillsFromText(String text) {
+        if (text == null || text.trim().isEmpty()) return Collections.emptyList();
+        String lower = " " + text.toLowerCase().replaceAll("[^a-z0-9+#.]", " ") + " ";
+        Set<String> detected = new LinkedHashSet<>();
+
+        Map<String, String> catalog = new LinkedHashMap<>();
+        catalog.put("java", "Java");
+        catalog.put("python", "Python");
+        catalog.put("c++", "C++");
+        catalog.put("c", "C");
+        catalog.put("c#", "C#");
+        catalog.put("javascript", "JavaScript");
+        catalog.put("js", "JavaScript");
+        catalog.put("typescript", "TypeScript");
+        catalog.put("ts", "TypeScript");
+        catalog.put("html", "HTML");
+        catalog.put("html5", "HTML");
+        catalog.put("css", "CSS");
+        catalog.put("css3", "CSS");
+        catalog.put("react", "React");
+        catalog.put("reactjs", "React");
+        catalog.put("react native", "React Native");
+        catalog.put("angular", "Angular");
+        catalog.put("vue", "Vue.js");
+        catalog.put("node", "Node.js");
+        catalog.put("nodejs", "Node.js");
+        catalog.put("express", "Express.js");
+        catalog.put("spring", "Spring Framework");
+        catalog.put("spring boot", "Spring Boot");
+        catalog.put("django", "Django");
+        catalog.put("flask", "Flask");
+        catalog.put("sql", "SQL");
+        catalog.put("mysql", "MySQL");
+        catalog.put("postgresql", "PostgreSQL");
+        catalog.put("postgres", "PostgreSQL");
+        catalog.put("oracle", "Oracle Database");
+        catalog.put("mongodb", "MongoDB");
+        catalog.put("redis", "Redis");
+        catalog.put("docker", "Docker");
+        catalog.put("kubernetes", "Kubernetes");
+        catalog.put("aws", "AWS");
+        catalog.put("gcp", "GCP");
+        catalog.put("azure", "Azure");
+        catalog.put("git", "Git");
+        catalog.put("github", "GitHub");
+        catalog.put("linux", "Linux");
+        catalog.put("rest api", "REST API");
+        catalog.put("microservices", "Microservices");
+        catalog.put("machine learning", "Machine Learning");
+        catalog.put("deep learning", "Deep Learning");
+        catalog.put("nlp", "NLP");
+        catalog.put("data structures", "Data Structures");
+        catalog.put("algorithms", "Algorithms");
+
+        for (Map.Entry<String, String> entry : catalog.entrySet()) {
+            String key = entry.getKey();
+            if (lower.contains(" " + key + " ") || lower.contains(" " + key + ",") || lower.contains(" " + key + ".")) {
+                detected.add(entry.getValue());
+            }
+        }
+        return new ArrayList<>(detected);
+    }
+
+    @SuppressWarnings("unchecked")
+    private Map<String, Object> mergeExtractedProfile(Map<String, Object> primary, Map<String, Object> secondary) {
+        Map<String, Object> res = new HashMap<>(secondary != null ? secondary : Collections.emptyMap());
+        if (primary != null) {
+            for (Map.Entry<String, Object> entry : primary.entrySet()) {
+                Object val = entry.getValue();
+                if (val != null) {
+                    if (val instanceof String && !((String) val).trim().isEmpty() && !"null".equalsIgnoreCase((String) val)) {
+                        res.put(entry.getKey(), val);
+                    } else if (val instanceof List && !((List<?>) val).isEmpty()) {
+                        res.put(entry.getKey(), val);
+                    } else if (val instanceof Number && ((Number) val).doubleValue() > 0) {
+                        res.put(entry.getKey(), val);
+                    }
+                }
+            }
+        }
         return res;
     }
 }
+
